sample-policies/allow-dns-api-telegram.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-dns-api-telegram"
  namespace: kube-public
spec:
  endpointSelector:
    matchLabels:
      app: alarms
  egress:
  - toFQDNs:
    - matchName: "api.telegram.org"  
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
