sample-policies/allow-get-cache.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-get-cache
  namespace: kube-public
spec:
  endpointSelector:
    matchLabels:
      app: httpbin
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/cache"
