sample-policies/allow-get-say-hello.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-get-say-hello
  namespace: kube-public
spec:
  endpointSelector:
    matchLabels:
      app: grpcbin
  ingress:
  - toPorts:
    - ports:
      - port: "9001"
        protocol: TCP
