sample-policies/default-deny-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: kube-public
spec:
  endpointSelector: {}
  ingress:
    - {}
